working experience cards on mobile and fixed margin on desktop

--- a/experience.css
+++ b/experience.css
@@ -210,6 +210,7 @@ html {
 }
 
 .container {
+    margin-left: 30px;
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -265,7 +266,6 @@ html {
 }
 
 @media only screen and (min-width: 768px) {
-    
     .timeline:before {
         content: "";
         position: absolute;
@@ -329,6 +329,10 @@ html {
 
 
 @media only screen and (max-width: 768px) {
+    .container {
+        margin-left: 0px;
+    }
+
     .nav {
         position: fixed;
         top: 0;
